# quiz-generator

./: README.md  pyproject.toml
app/: __init__.py  text_file_source.py  unsupported_file_extension.py
assets/: questions.json  questions.txt
quiz_generator/: __init__.py  generator.py
quiz_generator/ascii/: ascii_reader.py  ascii_writer.py
quiz_generator/ascii_io/: __init__.py  ascii_reader.py  ascii_writer.py
quiz_generator/base_io/: __init__.py  writer.py
quiz_generator/core/: __init__.py  handout.py  pool.py  question.py  source.py
quiz_generator/io/: __init__.py  reader.py  writer.py
quiz_generator/json_io/: __init__.py  json_reader.py  json_writer.py
templates/: index.html.jinja2
tests/: test_text_file_question_source.py
